WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
140106
Using calc() for -webkit-filter does not work
https://bugs.webkit.org/show_bug.cgi?id=140106
Summary
Using calc() for -webkit-filter does not work
Chris Dumez
Reported
2015-01-05 17:13:45 PST
Using calc() for -webkit-filter does not work because the CSS parser does not handle it properly.
Attachments
Patch
(5.13 KB, patch)
2015-01-05 17:18 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(5.10 KB, patch)
2015-01-05 21:10 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2015-01-05 17:18:01 PST
Created
attachment 244019
[details]
Patch
Darin Adler
Comment 2
2015-01-05 20:17:28 PST
Comment on
attachment 244019
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=244019&action=review
> Source/WebCore/css/CSSParser.cpp:9358 > + Ref<CSSPrimitiveValue> primitiveValue = createPrimitiveNumericValue(argumentWithCalculation);
I like auto for this sort of thing.
Chris Dumez
Comment 3
2015-01-05 21:10:53 PST
Created
attachment 244033
[details]
Patch
WebKit Commit Bot
Comment 4
2015-01-05 21:51:45 PST
Comment on
attachment 244033
[details]
Patch Clearing flags on attachment: 244033 Committed
r177950
: <
http://trac.webkit.org/changeset/177950
>
WebKit Commit Bot
Comment 5
2015-01-05 21:51:50 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug