Using calc() for -webkit-filter does not work https://bugs.webkit.org/show_bug.cgi?id=140106

Reviewed by Darin Adler.

Source/WebCore:

Using calc() for -webkit-filter did not work because the CSS parser did
not handle it properly. This patch addresses the issue.

Test: fast/css/webkit-filter-calc.html

* css/CSSParser.cpp:
(WebCore::CSSParser::parseBuiltinFilterArguments):

LayoutTests:

Add a layout test to make sure using calc() for -webkit-filter CSS
property is working as intended.

* fast/css/webkit-filter-calc-expected.txt: Added.
* fast/css/webkit-filter-calc.html: Added.


Canonical link: https://commits.webkit.org/158080@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@177950 268f45cc-cd09-0410-ab3c-d52691b4dbfc